--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-router-dom": "^6.22.3",
     "stripe": "^14.25.0",
     "tailwind-merge": "^2.2.2",
